--- a/src/main/webapp/registerSucces.xhtml
+++ b/src/main/webapp/registerSucces.xhtml
@@ -5,11 +5,50 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-Registration successful!"
-procede
-<h:form>
-   <h:commandButton action="login.xhtml" value="login"  class="btn btn-primary"></h:commandButton>
 
-</h:form>
+<h:head>
+   <title>Home</title>
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+   <style type="text/css">
+      .custom-card {
+         height: 500px;
 
+      }
+
+      .header.card {
+         height: 100px;
+      }
+   </style>
+</h:head>
+<h:body>
+<section class="vh-100 gradient-custom">
+   <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card bg-dark text-white" style="border-radius: 1rem;">
+               <div class="card-body p-5 text-center">
+
+                  <div class="mb-md-5 mt-md-4 pb-5">
+
+
+                     <p class="text-white-50 mb-5">Registration successful!"</p>
+
+                     <div class="form-outline form-white mb-4">
+                        <h:form>
+                           <h:commandButton action="login.xhtml" value="login"  class="btn btn-outline-light btn-lg px-5"></h:commandButton>
+
+                        </h:form>
+                     </div>
+
+
+                  </div>
+
+
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</section>
+</h:body>
 </html>
