--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -34,6 +34,9 @@
                  entrer un email valid ( name@example.com)
             </small>
         </div>
+        <div>
+            <h:messages/>
+        </div>
         <div class="form-group">
              <h:outputLabel value="cin" styleClass="required-label" />
             <h:inputText value="#{login_bean.cin}"  class="form-control" required="true" id="cin" requiredMessage="Entrer votre cin"  ></h:inputText>
